feat: handled disabling buttons on different cases and some style adjustments

--- a/src/components/TableTop/styles.module.css
+++ b/src/components/TableTop/styles.module.css
@@ -31,3 +31,14 @@
 .robotNorth {
   transform: rotate(180deg);
 }
+
+.actionBtns {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.currentPosition {
+  margin-top: 1rem;
+  color: green;
+}
